<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:paddingHorizontal="15dp"
        tools:context=".ui.RegisterFragment">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/register"
            android:gravity="center"
            android:id="@+id/tv"
            android:fontFamily="@font/ff_shamel_sans"
            android:textSize="@dimen/_23ssp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#E6E9EA"
            app:cardCornerRadius="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cardView"
            app:layout_constraintTop_toBottomOf="@+id/tv">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_mail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:hint="@string/email"
                    android:fontFamily="@font/ff_shamel_sans_one"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:gravity="center_vertical|top" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#E6E9EA"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/cardView2">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/ff_shamel_sans_one"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:gravity="center_vertical|top" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="#E6E9EA"
            app:cardCornerRadius="15dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_register"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingHorizontal="20dp"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:fontFamily="@font/ff_shamel_sans_one"
                    android:textColorHint="@color/gray"
                    android:textSize="16sp"
                    android:gravity="center_vertical|top" />

        </com.google.android.material.textfield.TextInputLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>